<resources>
    <string name="app_name">Netclan</string>
    <string name="explore">Explore</string>
    <string name="network">Network</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refine">Refine</string>
    <string name="explore_more">Explore More</string>
    <string name="you_haven_t_called_anybody_yet">You haven\'t called anybody yet</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="create_groups">Create groups!</string>
    <string name="personal">Personal</string>
    <string name="merchant">Merchant</string>
    <string name="business">Business</string>
    <string name="title_activity_refine">RefineActivity</string>

    <string name="large_text">Your Large Text Here</string>


    <string-array name="ideas">
        <item>Available | Hey Let Us Connect</item>
        <item>away | Stay Discrete and Watch</item>
        <item>Busy | Do not Disturb | Will Catch</item>
        <item>SOS | Emergency! Need Assistance</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="select_your_availability">Select Your Availability</string>
    <string name="choose_status">Choose Status</string>
    <string name="add_your_status">Add Your Status</string>
    <string name="select_hyper_local_distance">Select Hyper local Distance</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="save_and_explore">Save and Explore</string>
    <string name="hi_community_i_am_open_to_new_connections">Hi community! I am open to new connections</string>
</resources>